<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yapix</string>

    <string-array name="ranking_type_overall">
        <item>デイリー</item>
        <item>ウィークリー</item>
        <item>マンスリー</item>
        <item>ルーキー</item>
        <item>オリジナル</item>
        <item>男子に人気</item>
        <item>女子に人気</item>
        <!-- <item>過去ランキング</item> -->
    </string-array>
    <string-array name="ranking_type_illust">
        <item>デイリー</item>
        <item>ウィークリー</item>
        <item>マンスリー</item>
        <item>ルーキー</item>
        <item>男子に人気(R18)</item>
        <item>女子に人気(R18)</item>
        <!-- <item>過去ランキング</item> -->
    </string-array>
    <string-array name="ranking_type_manga">
        <item>デイリー</item>
        <item>ウィークリー</item>
        <item>マンスリー</item>
        <item>ルーキー</item>
        <item>男子に人気(R18)</item>
        <item>女子に人気(R18)</item>
        <!-- <item>過去ランキング</item> -->
    </string-array>
    <string-array name="ranking_type_novel">
        <item>デイリー</item>
        <item>ウィークリー</item>
        <item>ルーキー</item>
        <!-- <item>過去ランキング</item> -->
    </string-array>

    <string name="userName">ユーザー名</string>
    <string name="password">パスワード</string>
    <string name="general">一般</string>
    <string name="r18">R-18</string>
    <string name="timeline">タイムライン</string>
    <string name="search">検索</string>
    <string name="bookmark">ブックマーク</string>
    <string name="profile">プロフィール</string>
    <string name="ranking">ランキング</string>
    <string name="overall">総合</string>
    <string name="illust">イラスト</string>
    <string name="manga">漫画</string>
    <string name="novel">小説</string>
    <string name="tag">タグ</string>
    <string name="contributor">投稿者</string>
    <string name="postedDateTime">投稿日時</string>
    <string name="viewCount">閲覧数</string>
    <string name="evaluationCount">評価回数</string>
    <string name="evaluation">評価</string>
    <string name="comment">コメント</string>
    <string name="login">ログイン</string>
    <string name="loggedIn">ログイン中</string>
    <string name="searchHistory">検索履歴</string>
    <string name="searchTag">タグ検索</string>
    <string name="searchCaption">キャプション検索</string>
    <string name="searchUser">ユーザ検索</string>
    <string name="loggedSuccess">ログインしました</string>
    <string name="loggedFailure">ログインに失敗しました</string>
    <string name="accessSuccess">ログインしました</string>
    <string name="accessFailure">接続に失敗しました</string>
    <string name="accessFailure">接続に失敗しました</string>
    <string name="unknownError">不明なエラーです</string>
    <string name="terminationNotice">もう一度Backキーを押すと終了します</string>

</resources>