<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/searchEditText"
        style="@style/Yapix.Widget.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/search"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/searchTag"
            style="@style/Yapix.Search.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/searchTag" />

        <Button
            android:id="@+id/searchCaption"
            style="@style/Yapix.Search.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1.5"
            android:enabled="true"
            android:text="@string/searchCaption" />

        <Button
            android:id="@+id/searchUser"
            style="@style/Yapix.Search.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/searchUser" />
    </LinearLayout>

    <TextView
        style="@style/Yapix.Widget.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchHistory" />

</LinearLayout>