<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.LoginActivity" >

    <TableLayout
        android:id="@+id/table_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow style="@style/Yapix.Login.Row" >

            <TextView
                style="@style/Yapix.Login.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userName" />

            <EditText
                android:id="@+id/login_pixiv_id"
                style="@style/Yapix.Login.Edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:inputType="text" />
        </TableRow>

        <TableRow style="@style/Yapix.Login.Row" >

            <TextView
                style="@style/Yapix.Login.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:id="@+id/login_pixiv_password"
                style="@style/Yapix.Login.Edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:inputType="textPassword" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/login_button"
        style="@style/Yapix.Login.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:enabled="true"
        android:text="@string/login" />

</LinearLayout>